2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/jpeg.c: delay the creation of the display for
	the export image preview until the user requests a preview. Fixes
	bug #159376.

2004-11-27  Øyvind Kolås  <pippin@gimp.org>

	* libgimp/gimpexport.c: minor layout adjustments for HIG compliance.

2004-11-27  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/scripts/spyrogimp.scm: Force number of teeth
	to be integer values. Changed default for Outer teeth to give a
	more interesting image. Detabified file. Fixes bug #158448. 

2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_script_proc):
	don't look at the menu path to determine if the script is
	image-based. Instead look at the number of parameters we are being
	called with.

2004-11-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpinkoptions-gui.c: made the Size scale logarithmic
	as suggested in bug #159632.

2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c (save_image): tell the user that we can't
	handle indexed images with alpha channel (bug #159600).

2004-11-27  Sven Neumann  <sven@gimp.org>

	* app/main.c
	* app/widgets/gimpenumstore.h
	* app/widgets/gimpunitstore.c
	* plug-ins/common/retinex.c: applied patch by Tim Mooney that
	removes extraneous ;

2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c (run): applied patch by Tim Mooney that
	increase the size of values[] to accomodate the use of
	file_wmf_load_thumb (bug #159601).

2004-11-27  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/drawable.pdb: minor change to the PDB docs.

	* libgimp/gimpdrawable_pdb.c
	* tools/pdbgen/pdb/drawable.pdb: regenerated.

2004-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icosave.c
	* plug-ins/winicon/main.[ch]: moved code around.

2004-11-26  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/dog.c: make sure the preview image type matches
	the source image type.
